# pybind_examples

./: .gitignore  README.md  test.py  test_vmtk.py
src/: CMakeLists.txt  CmakeLists.txt  foo.cpp
src_vmtk/: CMakeLists.txt  CmakeLists.txt  foo_vmtk.cpp
src_vmtk_only/: CMakeLists.txt  foo_vmtk.cpp
